6/11/2024
	Fixed bug in new JSS code that was causing multiple solutions.
	Added support to allow a list of colors to be forced in a row/col, without specifying which group has which color
	Added assertions of shading/unshading/coloring to support lookahead for setting
	Added new test cases.

6/10/24 bis
	Added additional JSS test case

6/10/2024
	Migrated Japanese Sum Sudoku support to a separate file.
	Completely re-did JSS algorithm:
		much simpler model
		faster
		provides multi-color support
		allows ambiguous sum or ambiguous color clues
	Implemented test support for JSS, and added test cases.
	Updated overall test harness to integrate JSS testing with other testing, including modifying some test cases to update test output format.

5/26/2024
	Implemented slingshot clues, added test case.

5/24/2024
	Added support for Regionometers, including test case.
	Updated parity quad code to allow different numbers of disallowed odd/evens per 2x2 quad. Added test case.

5/22/24
	Added support for Extended Whispers Lines, which generalize and implement Run On Nabner and Entropic Whispers Lines.
	Added test cases.
	
5/21/24	
	Added support for negative constraint for XY Differences, and added a test case.
	Updated sandwich sum code to fix issue which was actually occurring in #57. Test for MRE Swap also migrated to countSolutions.
	Did some cleanup in Battlefield constraint code, though this did not resolve issue #57.
	Added support for global neighbor sums, issue #44; added test case.
	Moved most test cases from findSolution to countSolutions, since this gives a stronger test, ensuring that the solver verifies that solutions are unique. This did identify one constraint issue, likely with battlefield constraints.
	Updated solution printer class to accommodate test printing for countSolutions when using cellTransform or Japanese Sums sudoku.